--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "start": "node server.js",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --outDir dist/client --ssrManifest",
-    "build:server": "vite build --outDir dist/server --ssr /index.js",
-    "devinstall": "zx ../../devinstall.mjs -- node server.js --dev",
-    "lint": "eslint . --ext .js,.jsx --fix"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "start": "node server.js",
+  "build:client": "vite build --outDir dist/client --ssrManifest",
+  "build:server": "vite build --outDir dist/server --ssr /index.js",
+  "devinstall": "zx ../../devinstall.mjs -- node server.js --dev",
+  "lint": "eslint . --ext .js,.jsx --fix"
+},
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
